# choque-mod

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/: app.py  constants.py  physics.py  plotting.py  report.py
src/ai_dev_ubu_py2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/choque_mod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_physics.py
